@@ -153,10 +153,11 @@ module API
     end
 
     def attributes_for_keys(keys, custom_params = nil)
+      params_hash = custom_params || params
       attrs = {}
       keys.each do |key|
-        if params[key].present? or (params.has_key?(key) and params[key] == false)
-          attrs[key] = params[key]
+        if params_hash[key].present? or (params_hash.has_key?(key) and params_hash[key] == false)
+          attrs[key] = params_hash[key]
         end
       end
       ActionController::Parameters.new(attrs).permit!
