@@ -113,6 +113,21 @@ describe Ci::API::API do
         expect(json_response["depends_on_builds"].count).to eq(2)
         expect(json_response["depends_on_builds"][0]["name"]).to eq("rspec")
       end
+
+      %w(name version revision platform architecture).each do |param|
+        context "updates runner #{param}" do
+          let(:value) { "#{param}_value" }
+
+          subject { runner.read_attribute(param.to_sym) }
+
+          it do
+            post ci_api("/builds/register"), token: runner.token, info: { param => value }
+            expect(response.status).to eq(404)
+            runner.reload
+            is_expected.to eq(value)
+          end
+        end
+      end
     end
 
     describe "PUT /builds/:id" do
